podinfo/ing-podinfo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfoo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/articles)$ $1/ redirect;
    meta.helm.sh/release-name: podinfo
    meta.helm.sh/release-namespace: podinfo
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /podinfoo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 80
